# opinionated-rust-template

./: README.md
template/: .justfile  CONTRIBUTING.md  Cargo.toml  README.tpl  cargo-generate.toml  deny.toml  post-print-importatnt-info.rhai  pre-get-repository.rhai
template/.github/: PULL_REQUEST_TEMPLATE.md
template/.github/workflows/: cd.yml  ci.yml  deny.yml
template/src/: lib.rs  main.rs
