[package]
authors = ["{{authors}}"]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description = "{{project-description}}"
license = "BSL-1.0"

repository = "{{repository}}"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
# TODO keywords = ["...", "..."]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at https://crates.io/category_slugs, and
# they must match exactly.
# TODO categories = ["...", "..."]

exclude = [
    {% if ci-type == "github-actions" %} "/.github/" {% endif %}
] # exclude from publish

[dependencies]
# Some example crates that you may want to use.
#
# tokio = { version = "1", features = ["full"] }        # Async runtime
# async-std = "1.10"                                    # Alternative async runtime
#
# log = "0.4"                                           # lightweight logging facade
# pretty_env_logger = "0.4"                             # nice colored output for log levels
# lazy_static = "1.0"                                   # macro for declaring lazily evaluated statics
# serde = { version = "1.0", features = ["derive"] }    # Serialization / Deserialization
# clap = { version = "3.0", features = ["derive"] }     # Command line interface
# warp = { version = "0.3" }                            # HTTP server
# reqwest = { version = "0.11", features = ["json"] }   # HTTP Client 
# rand = { version = "0.8" }                            # random number generation
# bytes = { version = "1", features = ["serde"] }       # working with bytes
# endian_codec = { version = "0.1" }                    # work with byte orders
